changes in html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Website</title>
+        <body>
+            <h1>Kenny Robert</h1>
+        </body>
     </head>
 </html>
