Changes in index.html to provide UI, Import bootstrap

--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Website</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
-            <h1>Kenny Robert</h1>
+            <div class="row bg-primary text-white">
+                <h1 class="text-center">Kenny Robert's Portfolio</h1>
+            </div>
+            <div class="row">
+                <ul>
+                    <h2>Background</h2>
+                </ul>
+            </div>
+            <div class="row">
+                <ul>
+                    <p class="lead">    
+                        I am a senior at UC Berkeley majoring in Electrical Engineering and Computer Science. I have done internship experience in Sailpoint Inc as DevOps Engineer, Finku Inc as Front-End Engineer and Stickearn as Android Developers. To learn more about my background and qualification, you can contact me at LinkedIn
+                    </p>
+                </ul>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://www.linkedin.com/in/krobert-88/" type="button" class="btn btn-primary btn-lg">LinkedIn</a>
+                    <a href="https://github.com/kennyrobert88" type="button" class="btn btn-default btn-lg">Github</a>
+                </p>
+            </div>
+            <div class="row">
+                <ul>
+                    <h2>Education</h2>
+                </ul>
+            </div>
         </body>
     </head>
 </html>
