--- a/index.html
+++ b/index.html
@@ -5,22 +5,34 @@
         <title>Personal Website</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
-            <div class="row bg-primary text-white">
-                <h1 class="text-center">Kenny Robert's Portfolio</h1>
-            </div>
             <div class="row">
-                <ul>
-                    <h2>Background</h2>
-                </ul>
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="row bg-primary text-white">
+                        <h1 class="text-center">Kenny Robert's Portfolio</h1>
+                    </div>
+                </div>
+                <div class="col-md-1"></div>
             </div>
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <p>
-                        <span style="font-size: large; font-family:Arial, Helvetica, sans-serif">
-                            I am a senior at UC Berkeley majoring in Electrical Engineering and Computer Science. I have done internship experience in Sailpoint Inc as DevOps Engineer, Finku Inc as Front-End Engineer and Stickearn as Android Developers. To learn more about my background and qualification, you can contact me at LinkedIn
-                        </span>    
-                    </p>
+                    <ul>
+                         <h2>Background</h2>
+                    </ul>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <ul>
+                        <p>
+                            <span style="font-size: large; font-family:Arial, Helvetica, sans-serif">
+                                I am a senior at UC Berkeley majoring in Electrical Engineering and Computer Science. I have done internship experience in Sailpoint Inc as DevOps Engineer, Finku Inc as Front-End Engineer and Stickearn as Android Developers. To learn more about my background and qualification, you can contact me at LinkedIn
+                            </span>    
+                        </p>
+                    </ul>
                 </div>
                 <div class="col-md-1"></div>
             </div>
@@ -31,9 +43,13 @@
                 </p>
             </div>
             <div class="row">
-                <ul>
-                    <h2>Education</h2>
-                </ul>
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <ul>
+                        <h2>Education</h2>
+                    </ul>
+                </div>
+                <div class="col-md-1"></div>
             </div>
         </body>
     </head>
