Changes in hr line

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
+                    <hr class="slate-divider">
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
                     <ul>
                         <p>
                             <span style="font-size: large; font-family:Arial, Helvetica, sans-serif">
@@ -48,6 +55,13 @@
                     <ul>
                         <h2>Education</h2>
                     </ul>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <hr class="slate-divider">
                 </div>
                 <div class="col-md-1"></div>
             </div>
