--- a/index.html
+++ b/index.html
@@ -6,33 +6,48 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
-                    <div class="row bg-primary text-white">
-                        <h1 class="text-center">Kenny Robert's Portfolio</h1>
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <div class="">
+                        <h1 class="text-center">
+                            <span style="font-family:Arial, Helvetica, sans-serif">
+                                Kenny Robert's Portfolio
+                            </span>
+                        </h1>
                     </div>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
-                    <ul>
-                         <h2>Background</h2>
-                    </ul>
-                </div>
-                <div class="col-md-1"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                         <h2>
+                            <span style="font-family:Arial, Helvetica, sans-serif">
+                                Background
+                            </span> 
+                        </h2>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <hr class="slate-divider">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <ul>
                         <p>
                             <span style="font-size: large; font-family:Arial, Helvetica, sans-serif">
@@ -41,7 +56,7 @@
                         </p>
                     </ul>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <p class="text-center">
@@ -50,20 +65,61 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <ul>
-                        <h2>Education</h2>
+                        <h2>
+                            <span style="font-family:Arial, Helvetica, sans-serif">
+                                Game Projects
+                            </span> 
+                        </h2>
                     </ul>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                        <li>
+                            <h3>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    Ants(Python)
+                                </span>
+                            </h3>
+                            <ul>
+                                <li>
+                                    <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                        Implement Games similar to Plant Vs. Zombie where the ants fights against various types of bees
+                                    </span>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                        Using the idea of object oriented programming to encapsulate the logic of the game and time state to determine the position of bees
+                                    </span>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/CS61A/tree/main/Project/ants" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                
             </div>
         </body>
     </head>
