Changes in Game Projects and Mobile application Projects

--- a/index.html
+++ b/index.html
@@ -119,7 +119,92 @@
                 </p>
             </div>
             <div class="row">
-                
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                        <li>
+                            <h3>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    Cats (Python)
+                                </span>
+                            </h3>
+                        </li>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                   Creating a program that measures typing speed, provide autocorrect and enable multiplayer use (Typeracer)
+                                </span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                    Recreating the logic using Higher-Order Functions, Recursion, and Object-Oriented Programming
+                                 </span>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/CS61A/tree/main/Project/cats" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                        <li>
+                            <h3>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    Hogs (Python)
+                                </span>
+                            </h3>
+                        </li>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                   Implementing a Dice games where player one and two switch turns each time
+                                 </span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                   This projects require an understanding of control statements and higher-order functions
+                                 </span>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/CS61A/tree/main/Project/hog" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                         <h2>
+                            <span style="font-family:Arial, Helvetica, sans-serif">
+                                Mobile Application Projects
+                            </span> 
+                        </h2>
+                    </ul>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <hr class="slate-divider">
+                </div>
+                <div class="col-md-2"></div>
             </div>
         </body>
     </head>
