Changes in logo and adding images folder

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kenny Robert's Portfolio</title>
+        <link rel="shortcut icon" type="image/png" href="images/Kenny-Robert-White.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
             <div class="row">
@@ -29,11 +30,11 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <ul>
-                         <h2>
+                         <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
                                 Background
                             </span> 
-                        </h2>
+                        </h3>
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -68,11 +69,11 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <ul>
-                        <h2>
+                        <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
                                 Game Projects
                             </span> 
-                        </h2>
+                        </h3>
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -89,11 +90,11 @@
                 <div class="col-md-8">
                     <ul>
                         <li>
-                            <h3>
+                            <h4>
                                 <span style="font-family:Arial, Helvetica, sans-serif;">
                                     Ants (Python)
                                 </span>
-                            </h3>
+                            </h4>
                             <ul>
                                 <li>
                                     <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
@@ -123,11 +124,11 @@
                 <div class="col-md-8">
                     <ul>
                         <li>
-                            <h3>
+                            <h4>
                                 <span style="font-family:Arial, Helvetica, sans-serif;">
                                     Cats (Python)
                                 </span>
-                            </h3>
+                            </h4>
                         </li>
                         <ul>
                             <li>
@@ -157,11 +158,11 @@
                 <div class="col-md-8">
                     <ul>
                         <li>
-                            <h3>
+                            <h4>
                                 <span style="font-family:Arial, Helvetica, sans-serif;">
                                     Hogs (Python)
                                 </span>
-                            </h3>
+                            </h4>
                         </li>
                         <ul>
                             <li>
@@ -190,11 +191,11 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <ul>
-                         <h2>
+                         <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
                                 Mobile Application Projects
                             </span> 
-                        </h2>
+                        </h3>
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -203,6 +204,26 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <hr class="slate-divider">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <ul>
+                        <li>
+                            <h4>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    MovieDB (Android Programming)
+                                </span>
+                            </h4>
+                        </li>
+                        <ul>
+                            <li>
+
+                            </li>
+                        </ul>
+                    </ul>
                 </div>
                 <div class="col-md-2"></div>
             </div>
