--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kenny Robert's Portfolio</title>
-        <link rel="shortcut icon" type="image/png" href="images/Kenny-Robert-White.png">
+        <link rel="shortcut icon" type="image/png" href="images/Kenny-Robert.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <div class="">
-                        <h1 class="text-center">
-                            <span style="font-family:Arial, Helvetica, sans-serif">
-                                Kenny Robert's Portfolio
-                            </span>
-                        </h1>
-                    </div>
+                    <h1 class="text-center">
+                        <!-- <span style="font-family:Arial, Helvetica, sans-serif">
+                            Kenny Robert's Portfolio
+                        </span> -->
+                        <img src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:fit-content;height:100px">
+                    </h1>
                 </div>
                 <div class="col-md-2"></div>
             </div>
