--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <body>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <h1 class="text-center">
                         <!-- <span style="font-family:Arial, Helvetica, sans-serif">
                             Kenny Robert's Portfolio
@@ -16,18 +16,18 @@
                         <img src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:fit-content;height:100px">
                     </h1>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                          <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
@@ -36,18 +36,18 @@
                         </h3>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <p>
                             <span style="font-size: large; font-family:Arial, Helvetica, sans-serif">
@@ -56,7 +56,7 @@
                         </p>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
                 <p class="text-center">
@@ -65,8 +65,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
@@ -75,18 +75,18 @@
                         </h3>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <li>
                             <h4>
@@ -111,7 +111,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
                 <p class="text-center">
@@ -119,8 +119,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <li>
                             <h4>
@@ -145,7 +145,7 @@
                         </ul>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
                 <p class="text-center">
@@ -153,8 +153,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <li>
                             <h4>
@@ -179,7 +179,7 @@
                         </ul>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
                 <p class="text-center">
@@ -187,8 +187,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                          <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
@@ -197,18 +197,18 @@
                         </h3>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <hr class="slate-divider">
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                     <ul>
                         <li>
                             <h4>
@@ -219,12 +219,72 @@
                         </li>
                         <ul>
                             <li>
-
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                    Create Movie Review application to track down movies by categories, connecting to MovieDB API
+                                </span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                    Implementing up-to-date Native android infrastrucutre platform with Kotlin, XML, rx-java http libraries and Koin Dependency Injection
+                                </span>
                             </li>
                         </ul>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/AndroidMVVMMovieDB" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <ul>
+                        <li>
+                            <h4>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    Weather Tracking Application (Android Programming)
+                                </span>
+                            </h4>
+                        </li>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                    Create Weather Tracking Application in Native Android Platform by implementing get location function, time and weather API
+                                </span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                    Implementing up-to-date Native android infrastrucutre platform with Kotlin, XML, rx-java http libraries and Koin Dependency Injection
+                                </span>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/AndroidMVVMWeatherApp" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <hr class="slate-divider">
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6"></div>
+                <div class="col-md-3"></div>
             </div>
         </body>
     </head>
