Changes in logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <!-- <span style="font-family:Arial, Helvetica, sans-serif">
                             Kenny Robert's Portfolio
                         </span> -->
-                        <img src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:fit-content;height:100px">
+                        <img src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:fit-content;max-height: 100px;">
                     </h1>
                 </div>
                 <div class="col-md-3"></div>
