--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <!-- <span style="font-family:Arial, Helvetica, sans-serif">
                             Kenny Robert's Portfolio
                         </span> -->
-                        <img class="center" src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:50%;max-height: 100px;">
+                        <img class="center" src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:30%;height:6%;">
                     </h1>
                 </div>
                 <div class="col-md-3"></div>
