--- a/index.html
+++ b/index.html
@@ -190,6 +190,40 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <ul>
+                        <li>
+                            <h4>
+                                <span style="font-family:Arial, Helvetica, sans-serif;">
+                                    Snake (Python)
+                                </span>
+                            </h4>
+                        </li>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                  Recreating snake games where the snake eat pallete and each time will add up the score, the game will end if the snake out of bound or the snake eat themselves
+                                 </span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
+                                  This projects implements the library of Pygame GUI, list comprehension and function definition
+                                 </span>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <p class="text-center">
+                    <a href="https://github.com/kennyrobert88/snakegame" type="button" class="btn btn-default btn-lg">Source Code</a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <ul>
                          <h3>
                             <span style="font-family:Arial, Helvetica, sans-serif">
                                 Mobile Application Projects
