--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <h1 class="text-center">
-                                <span style="font-family:Arial, Helvetica, sans-serif">
+                                <!-- <span style="font-family:Arial, Helvetica, sans-serif">
                                     Kenny Robert's Portfolio
-                                </span>
+                                </span> -->
+                                <img class="center" src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:30%;">
                             </h1>
                         </div>
                         <div class="col-md-3"></div>
