--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             Ants (Python)
                                         </span>
                                     </h4>
                                     <ul>
-                                        <li>
+                                        <li style="font-size: large;">
                                             <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                                 Implement Games similar to Plant Vs. Zombie where the ants fights against various types of bees
                                             </span>
                                         </li>
                                     </ul>
                                     <ul>
-                                        <li>
+                                        <li style="font-size: large;">
                                             <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                                 Using the idea of object oriented programming to encapsulate the logic of the game and time state to determine the position of bees
                                             </span>
@@ -124,7 +124,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             Cats (Python)
@@ -132,14 +132,14 @@
                                     </h4>
                                 </li>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                            Creating a program that measures typing speed, provide autocorrect and enable multiplayer use (Typeracer)
                                         </span>
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                             Recreating the logic using Higher-Order Functions, Recursion, and Object-Oriented Programming
                                          </span>
@@ -158,7 +158,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             Hogs (Python)
@@ -166,14 +166,14 @@
                                     </h4>
                                 </li>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                            Implementing a Dice games where player one and two switch turns each time
                                          </span>
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                            This projects require an understanding of control statements and higher-order functions
                                          </span>
@@ -192,7 +192,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             Snake (Python)
@@ -200,14 +200,14 @@
                                     </h4>
                                 </li>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                           Recreating snake games where the snake eat pallete and each time will add up the score, the game will end if the snake out of bound or the snake eat themselves
                                          </span>
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                           This projects implements the library of Pygame GUI, list comprehension and function definition
                                          </span>
@@ -246,7 +246,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             MovieDB (Android Programming)
@@ -254,14 +254,14 @@
                                     </h4>
                                 </li>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                             Create Movie Review application to track down movies by categories, connecting to MovieDB API
                                         </span>
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                             Implementing up-to-date Native android infrastrucutre platform with Kotlin, XML, rx-java http libraries and Koin Dependency Injection
                                         </span>
@@ -280,7 +280,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <ul>
-                                <li>
+                                <li style="font-size: large;">
                                     <h4>
                                         <span style="font-family:Arial, Helvetica, sans-serif;">
                                             Weather Tracking Application (Android Programming)
@@ -288,14 +288,14 @@
                                     </h4>
                                 </li>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                             Create Weather Tracking Application in Native Android Platform by implementing get location function, time and weather API
                                         </span>
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li>
+                                    <li style="font-size: large;">
                                         <span style="font-family:Arial, Helvetica, sans-serif; font-size: large;">
                                             Implementing up-to-date Native android infrastrucutre platform with Kotlin, XML, rx-java http libraries and Koin Dependency Injection
                                         </span>
