Changing style of canvas

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="row" style="justify-content: center; display: flex;">
-        <div class="col-md-5">
+        <div style="width:600px; max-width:100%; flex-shrink: 1;">
             <!-- Header -->
             <div class="text-center">
                 <img src="images/Kenny-Robert-FullName.jpeg" alt="Full Name" style="width:300px; margin-top: 20px;" />
