--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-    <div class="row" style="justify-content: center; display: flex;">
+    <div class="row" style="justify-content: center; display: flex; margin-left: 5px; margin-right: 5px;">
         <div style="width:600px; max-width:100%; flex-shrink: 1;">
             <!-- Header -->
             <div class="text-center">
